--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <nav id="navbar">
+    <header>Documentation</header>
+    <a href="#Introduction" class="nav-link">Introduction</a>
+    <a href="#Installation" class="nav-link">Installation</a>
+    <a href="#Usage" class="nav-link">Usage</a>
+    <a href="#API" class="nav-link">API</a>
+    <a href="#License" class="nav-link">License</a>
+  </nav>
 </body>
 </html>
