--- a/index.html
+++ b/index.html
@@ -15,5 +15,72 @@
     <a href="#API" class="nav-link">API</a>
     <a href="#License" class="nav-link">License</a>
   </nav>
+
+  <main id="main-doc">
+    <section id="Introduction" class="main-section">
+      <header>Introduction</header>
+      <p>This document serves as the technical documentation for the project.</p>
+      <p>It contains installation instructions, usage examples, and an API reference.</p>
+      <code>const project = 'Technical Documentation';</code>
+      <p>The purpose of this project is to help developers understand how to use the system.</p>
+      <p>It covers key concepts and functionality.</p>
+      <ul>
+        <li>Getting Started</li>
+        <li>Installation</li>
+        <li>Basic Setup</li>
+      </ul>
+    </section>
+
+    <section id="Installation" class="main-section">
+      <header>Installation</header>
+      <p>To install this project, you need to have Node.js installed on your system.</p>
+      <code>npm install technical-doc</code>
+      <p>Ensure that all dependencies are installed by running the command above.</p>
+      <p>If you encounter any issues, refer to the troubleshooting section.</p>
+      <ul>
+        <li>Step 1: Install Node.js</li>
+        <li>Step 2: Clone the repository</li>
+        <li>Step 3: Install dependencies</li>
+      </ul>
+    </section>
+
+    <section id="Usage" class="main-section">
+      <header>Usage</header>
+      <p>Once installed, you can use the library in your project.</p>
+      <code>import doc from 'technical-doc';</code>
+      <p>For basic usage, initialize the documentation system by calling the setup function.</p>
+      <p>Ensure that you have the proper configurations set in the config file.</p>
+      <ul>
+        <li>Initialization</li>
+        <li>Configuration</li>
+        <li>Running the system</li>
+      </ul>
+    </section>
+
+    <section id="API" class="main-section">
+      <header>API</header>
+      <p>The API provides several methods for interacting with the documentation system.</p>
+      <code>api.getDocumentation()</code>
+      <p>Methods include fetching data, updating content, and managing users.</p>
+      <p>Make sure to use the appropriate authentication when accessing certain endpoints.</p>
+      <ul>
+        <li>GET /docs</li>
+        <li>POST /update</li>
+        <li>PUT /users</li>
+      </ul>
+    </section>
+
+    <section id="License" class="main-section">
+      <header>License</header>
+      <p>This project is licensed under the MIT License.</p>
+      <code>MIT License</code>
+      <p>You can use this software in accordance with the terms specified in the license.</p>
+      <ul>
+        <li>MIT License</li>
+        <li>Free to use and modify</li>
+      </ul>
+    </section>
+  </main>
+
 </body>
 </html>
